# lab1

./: CMakeLists.txt  include.cpp  include.h  picture.cpp
console/: main.cc
include/: picture.h
